# re-id

./: .gitignore  README.md  analogs_new.md  article.md  config.md  diplom.md  install.md  pyproject.toml  requirements.base.txt
configs/: pipeline.template.toml  pipeline.toml
docs/: 2026ВКР238410ДАМАКИН_презентация.pptx  analogs.md  article.md  key_questions.md  paper.docx  paper.md
notebooks/: torchreid_image_test.ipynb  torchreid_train.ipynb
scripts/: analyze_mot17_assignments.py  evaluate_mot17_reid.py  mot17_to_video.py
src/: run.py  torchreid_train.ipynb
src/pipeline/: __init__.py  cli.py  config.py  reid_runtime.py  run_detect.py  run_reid.py  run_reid_file.py  run_reid_live.py  run_reid_universal.py
src/pipeline/detection/: yolo.py
src/pipeline/reid/: extractor.py  factory.py  gallery.py  persistence.py
src/pipeline/tracking/: iou.py
src/pipeline/utils/: logging.py  paths.py  performance.py  sources.py  system_info.py  video.py
src/reid/detection/: yolo.py
src/reid/io/: video.py
src/reid/utils/: logging.py  paths.py
tests/: test_config.py  test_helpers.py
